--- a/GUI/Views/Home/Index.cshtml
+++ b/GUI/Views/Home/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    <p>Json: @ViewBag.json_response</p>
+
+    @Html.Partial("FilterForm")
+    @Html.Partial("TableView")
+
 </div>
