--- a/GUI/Views/Shared/FilterForm.cshtml
+++ b/GUI/Views/Shared/FilterForm.cshtml
@@ -1,4 +1,4 @@
-@model FilterForm
+@model FilterTableForm
 
 <h2>Filter Settings</h2>
 
@@ -8,5 +8,30 @@
         @Html.ValidationSummary()
     </div>
     
+    <div>
+        <p style="color: red;">@Html.ValidationMessageFor(x => x.sensorId)</p>
+        <p>@Html.LabelFor(x => x.sensorId)
+        @Html.TextBoxFor(x => x.sensorId)</p>
+    </div>
+    
+    <div>
+        <p style="color: red;">@Html.ValidationMessageFor(x => x.sensorType)</p>
+        <p>@Html.LabelFor(x => x.sensorType)
+        @Html.TextBoxFor(x => x.sensorType)</p>
+    </div>
+    
+    <div>
+        <p style="color: red;">@Html.ValidationMessageFor(x => x.dateTime)</p>
+        <p>@Html.LabelFor(x => x.dateTime)
+        @Html.EditorFor(x => x.dateTime)</p>
+    </div>
+        
+
+                                            
     <input type="submit" value="Filter"/>
 }   @* </form> *@
+
+
+
+
+
