--- a/GUI/Views/Shared/TableView.cshtml
+++ b/GUI/Views/Shared/TableView.cshtml
@@ -1,2 +1,35 @@
-@model TModel
-
+<h2>Data</h2>
+<table align="center" border="1">
+    <tr>
+        <th>@using (Html.BeginForm(actionName: "GetFiltered",  "Home",new {sort="SensorId"},  FormMethod.Get ))
+            {
+                <input type="submit" value="SensorId"/>
+            } </th>
+        <th>@using (Html.BeginForm(actionName: "GetFiltered",  "Home",new {sort="SensorType"},  FormMethod.Get ))
+            {
+                <input type="submit" value="SensorType"/>
+            }</th>
+        <th>@using (Html.BeginForm(actionName: "GetFiltered",  "Home",new {sort="Unit"},  FormMethod.Get ))
+            {
+                <input type="submit" value="Unit"/>
+            }</th>
+        <th>@using (Html.BeginForm(actionName: "GetFiltered",  "Home",new {sort="DataTime"},  FormMethod.Get ))
+            {
+                <input type="submit" value="DataTime"/>
+            }</th>
+        <th>@using (Html.BeginForm(actionName: "GetFiltered",  "Home",new {sort="Value"},  FormMethod.Get ))
+            {
+                <input type="submit" value="Value"/>
+            }</th>
+    </tr>
+    @foreach (var s in @ViewBag.json_response)
+    {
+        <tr>
+            <th>@s.sensorId</th>
+            <th>@s.sensorType</th>
+            <th>@s.unit</th>
+            <th>@s.dateTime</th>
+            <th>@s.value</th>
+        </tr>
+    }
+</table>
