--- a/GUI/Views/Shared/FilteredTableView.cshtml
+++ b/GUI/Views/Shared/FilteredTableView.cshtml
@@ -1,26 +1,11 @@
-<h2>Data</h2>
+<h2>Filtered Data</h2>
 <table align="center" border="1">
     <tr>
-        <th>@using (Html.BeginForm(actionName: "GetFiltered",  "Home",new {sort="SensorId"},  FormMethod.Get ))
-            {
-                <input type="submit" value="SensorId"/>
-            } </th>
-        <th>@using (Html.BeginForm(actionName: "GetFiltered",  "Home",new {sort="SensorType"},  FormMethod.Get ))
-            {
-                <input type="submit" value="SensorType"/>
-            }</th>
-        <th>@using (Html.BeginForm(actionName: "GetFiltered",  "Home",new {sort="Unit"},  FormMethod.Get ))
-            {
-                <input type="submit" value="Unit"/>
-            }</th>
-        <th>@using (Html.BeginForm(actionName: "GetFiltered",  "Home",new {sort="DataTime"},  FormMethod.Get ))
-            {
-                <input type="submit" value="DataTime"/>
-            }</th>
-        <th>@using (Html.BeginForm(actionName: "GetFiltered",  "Home",new {sort="Value"},  FormMethod.Get ))
-            {
-                <input type="submit" value="Value"/>
-            }</th>
+        <th>SensorID</th>
+        <th>SensorType</th>
+        <th>Unit</th>
+        <th>DataTime</th>
+        <th>Value</th>
     </tr>
     @foreach (var s in @ViewBag.json_response)
     {
