--- a/GUI/Views/Shared/_Layout.cshtml
+++ b/GUI/Views/Shared/_Layout.cshtml
@@ -23,13 +23,37 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Series" asp-action="Series">Graph</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Series" asp-action="Graph"
+      asp-route-sortBy="@Context.Request.Query["sortBy"]"
+      asp-route-page="@Context.Request.Query["page"]"
+                asp-route-value="@Context.Request.Query["value"]"
+                asp-route-pageSize="@Context.Request.Query["pageSize"]"
+                asp-route-sensorType="@Context.Request.Query["sensorType"]"
+                asp-route-sensorId="@Context.Request.Query["sensorId"]"
+                asp-route-datetime="@Context.Request.Query["datetime"]"
+                asp-route-ascending="@Context.Request.Query["ascending"]">Graph</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Filter" asp-action="JsonForm">Get JSON</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Filter" asp-action="GetJson"
+      asp-route-sortBy="@Context.Request.Query["sortBy"]"
+      asp-route-page="@Context.Request.Query["page"]"
+                asp-route-value="@Context.Request.Query["value"]"
+                asp-route-pageSize="@Context.Request.Query["pageSize"]"
+                asp-route-sensorType="@Context.Request.Query["sensorType"]"
+                asp-route-sensorId="@Context.Request.Query["sensorId"]"
+                asp-route-datetime="@Context.Request.Query["datetime"]"
+                asp-route-ascending="@Context.Request.Query["ascending"]">Get JSON</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Filter" asp-action="CSVForm">Get CSV</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Filter" asp-action="GetCSV"
+      asp-route-sortBy="@Context.Request.Query["sortBy"]"
+      asp-route-page="@Context.Request.Query["page"]"
+                asp-route-value="@Context.Request.Query["value"]"
+                asp-route-pageSize="@Context.Request.Query["pageSize"]"
+                asp-route-sensorType="@Context.Request.Query["sensorType"]"
+                asp-route-sensorId="@Context.Request.Query["sensorId"]"
+                asp-route-datetime="@Context.Request.Query["datetime"]"
+                asp-route-ascending="@Context.Request.Query["ascending"]">Get CSV</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Pulpit" asp-action="Pulpit">Pulpit</a>
