--- a/GUI/Views/Shared/FilterForm.cshtml
+++ b/GUI/Views/Shared/FilterForm.cshtml
@@ -21,9 +21,9 @@
     </div>
     
     <div>
-        <p style="color: red;">@Html.ValidationMessageFor(x => x.dateTime)</p>
-        <p>@Html.LabelFor(x => x.dateTime)
-        @Html.EditorFor(x => x.dateTime)</p>
+        <p style="color: red;">@Html.ValidationMessageFor(x => x.startDatetime)</p>
+        <p>@Html.LabelFor(x => x.startDatetime)
+        @Html.EditorFor(x => x.startDatetime)</p>
     </div>
         
 
