--- a/GUI/Views/Shared/FilterForm.cshtml
+++ b/GUI/Views/Shared/FilterForm.cshtml
@@ -2,7 +2,7 @@
 
 <h2>Filter Settings</h2>
 
-@using (Html.BeginForm(actionName: "Filter", "Filter", method: FormMethod.Post))
+@using (Html.BeginForm(actionName: "setFilter", "Home", method: FormMethod.Post))
 {
     <div>
         @Html.ValidationSummary()
