--- a/GUI/Views/Shared/TableView.cshtml
+++ b/GUI/Views/Shared/TableView.cshtml
@@ -54,7 +54,7 @@
                   asp-route-startDatetime="@Context.Request.Query["startDatetime"]"
                   asp-route-endDatetime="@Context.Request.Query["endDatetime"]"
                   asp-route-ascending="@Context.Request.Query["ascending"]">
-                <input type="hidden" name="sortBy" value="sensorId" />
+                <input type="hidden" name="sortBy" value="SensorId" />
                 <input type="submit" value="SensorId"/>
             </form>
         </th>
@@ -68,7 +68,7 @@
                   asp-route-startDatetime="@Context.Request.Query["startDatetime"]"
                   asp-route-endDatetime="@Context.Request.Query["endDatetime"]"
                   asp-route-ascending="@Context.Request.Query["ascending"]">
-                            <input type="hidden" name="sortBy" value="sensorType" />
+                            <input type="hidden" name="sortBy" value="SensorType" />
                 <input type="submit" value="SensorType"/>
             </form>
         </th>
@@ -82,8 +82,8 @@
                   asp-route-startDatetime="@Context.Request.Query["startDatetime"]"
                   asp-route-endDatetime="@Context.Request.Query["endDatetime"]"
                   asp-route-ascending="@Context.Request.Query["ascending"]">
-                            <input type="hidden" name="sortBy" value="DataType" />
-                <input type="submit" value="DataType"/>
+                            <input type="hidden" name="sortBy" value="DateTime" />
+                <input type="submit" value="DateTime"/>
             </form>
         </th>
         <th>
